# cityengine-sdk

./: .cproject  .editorconfig  .gitignore  .project  Jenkinsfile  LICENSE  README.md  changelog.md  index.html  linux.project  pipeline.groovy  win32.project
cmake/: Findcom.esri.prt.codecs.maya.cmake
examples/: prt.cmake
examples/bunny/: identity.rpk
examples/bunny/src/: CMakeLists.txt  VoxelCallbacks.h  VoxelEncoder.cpp  VoxelEncoder.h  bunny.kdev4  main.cpp  voxenc.cpp
examples/bunny/src/.kdev4/: bunny.kdev4
examples/prt4cmd/: .clang-format  .gitignore  README.linux  README.linux_osx  README.windows  README_linux.md  README_linux_osx.md  README_windows.md
examples/prt4cmd/src/: CLI11.hpp  CMakeLists.txt  logging.h  prt4cmd.cpp  utils.cpp  utils.h
examples/prt4maya/: .gitignore  README.linux  README.linux_osx  README.md  README.windows  README_linux_osx.md  README_windows.md  build.bat  build.sh  common.cmake
examples/prt4maya/client/src/: CMakeLists.txt  prt4maya.sln  prtModule.in
examples/prt4maya/client/src/conf/: prt_config.xml
examples/prt4maya/client/src/prt4maya/: CMakeLists.txt  PRTAttrs.cpp  PRTCreate.cpp  PRTMaterials.cpp  PRTNode.cpp  PRTNode.h  Utilities.cpp  Utilities.h  prt4maya.vcproj  prt4maya.vsprops  prt4mayaNode.h
examples/prt4maya/client/src/scripts/: AEprtTemplate.mel  prt4mayaCreateUI.mel  prt4mayaDeleteUI.mel
examples/prt4maya/client/src/wrapper/: CMakeLists.txt  MayaCallbacks.cpp  MayaCallbacks.h  MayaData.cpp  MayaData.h  MayaOutputHandler.cpp  MayaOutputHandler.h
examples/prt4maya/codec/src/: CMakeLists.txt  codecs_maya.cpp  codecs_maya.cpp.in  codecs_maya.h  exportConfig.cmake.in  maya_codec.h
examples/prt4maya/codec/src/encoder/: IMayaData.h  IMayaOutputHandler.h  MayaEncoder.cpp  MayaEncoder.h
examples/prt4maya/src/client/: CMakeLists.txt
examples/prt4maya/src/client/node/: MayaCallbacks.cpp  MayaCallbacks.h  PRTAssignCommand.cpp  PRTAttrs.cpp  PRTCreate.cpp  PRTMaterialNode.cpp  PRTMaterialNode.h  PRTMaterials.cpp  PRTNode.cpp  PRTNode.h  Utilities.cpp  Utilities.h
examples/prt4maya/src/client/prtModifier/: PRTModifierAction.cpp  PRTModifierAction.h  PRTModifierCommand.cpp  PRTModifierCommand.h  PRTModifierNode.cpp  PRTModifierNode.h  PRTModifierPlugin.cpp
examples/prt4maya/src/client/prtModifier/polyModifierBase/: polyModifierCmd.cpp  polyModifierFty.h  polyModifierNode.cpp  polyModifierNode.h
examples/prt4maya/src/client/scripts/: AEprtTemplate.mel  prt4mayaCreateUI.mel
examples/prt4maya/src/client/shaders/: prtShaderStingray.sfx
examples/prt4maya/src/codec/: CMakeLists.txt  codecs_maya.cpp  codecs_maya.h
examples/prt4maya/src/codec/encoder/: IMayaCallbacks.h  MayaEncoder.cpp  MayaEncoder.h
examples/prt4njs/: .gitignore
examples/prt4njs/prt4njs/src/: CMakeLists.txt  binding.gyp  prt4njs.cc
examples/prt4nodejs/: .jshintrc  README.md  package.json
examples/prt4py/src/: CMakeLists.txt  CTestConfig.cmake  readme.rst  setup.py
examples/prt4py/src/include/: SimpleWrapper.h
examples/prt4py/src/src/: CMakeLists.txt  SimpleWrapper.cpp  prt4py.pyx
examples/prt4py/src/test/: simple_test.py
examples/prt4unity/: README.windows  deploy.cmd
examples/stldec/: README_linux.md  README_linux_osx.md  README_windows.md
examples/stldec/src/: CMakeLists.txt  STLDecoder.cpp  STLDecoder.h  main.cpp
examples/stlenc/: .gitignore  README.linux  README.linux_osx  README.windows  README_linux.md  README_linux_osx.md  README_windows.md
examples/stlenc/src/: CMakeLists.txt  STLEncoder.cpp  STLEncoder.h  main.cpp  main.cpp.in
examples/ubidec/: README.txt
html/: _2_attributable_8h_source.html  _2_initial_shape_8h_source.html  _2_resolve_map_8h_source.html  _a_p_i_8h_source.html  _adaptor_8h_source.html  _adaptor_factory_8h_source.html  _annotation_8h_source.html  _annotation_builder_8h_source.html  _app_notes.html  _attributable_8h_source.html  _attribute_map_8h_source.html  _bounding_box_8h_source.html  _builder_8h_source.html  _builtin_attributes_8h_source.html  _builtin_material_attributes_8h_source.html  _builtin_material_attributes__impl__decl_8h_source.html  _builtin_material_attributes_builder__impl__decl_8h_source.html  _builtin_shape_attributes_8h_source.html  _builtin_shape_attributes__impl__decl_8h_source.html  _c_g_a_error_8h_source.html  _c_g_a_error_level_8h_source.html  _c_g_b_8h_source.html  _c_t_string_8h_source.html  _cache_8h_source.html  _callbacks_8h_source.html  _content_8h_source.html  _content_type_8h_source.html  _data_backend_8h_source.html  _debug_utils_8h_source.html  _decoder_8h_source.html  _decoder_factory_8h_source.html  _decoder_info_8h_source.html  _encode_options_8h_source.html  _encode_options_validator_8h_source.html  _encode_preparator_8h_source.html  _encoder_8h_source.html  _encoder_factory_8h_source.html  _encoder_info_8h_source.html  _encoder_info_builder_8h_source.html  _exception_8h_source.html  (+920 more)
html/cgaref/: manual_style.css
html/cgareference/: attr.html  attr_comp.html  attr_initialShape.html  attr_material.html  attr_pivot.html  attr_scope.html  cga_annotations.html  cga_builtinAssets.html  cga_changelog.html  cga_context.html  cga_eulerAngles.html  cga_texturing.html  cgaindex.html  func_abs.html  func_acos.html  func_array.html  func_asin.html  func_assetInfo.html  func_assetNamingInfo.html  func_assetSearch.html  func_assetsSortRatio.html  func_assetsSortSize.html  func_atan2.html  func_bool.html  func_ceil.html  func_comp.html  func_contextCompare.html  func_convert.html  func_edgeAttr.html  func_fileExists.html  func_fileSearch.html  func_find.html  func_floor.html  func_geometry.html  func_getGeoCoord.html  func_index.html  func_isinf.html  func_isnan.html  func_isnull.html  func_item.html  (+51 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  all_8.js  (+125 more)
install/: prt4mayaDeleteUI.mel
(+314 files in other folders)
